# hqagent

./: .env.example  .gitignore  Cargo.toml  LICENSE  main.py  pyproject.toml  test.py
app/agent/: __init__.py  compass.py  context.py  llm.py  loop.py  skill_loader.py  task_manager.py  tools.py
app/api/: __init__.py
skills/ai-news/: SKILL.md
skills/weather/: SKILL.md
src/: lib.rs  main.rs
