[package]
name = "hqagent"
version = "0.1.0"
edition = "2021"

[lib]
name = "hqagent"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["pyo3/extension-module"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
futures-core = "0.3"
futures-util = "0.3"
async-stream = "0.3"
bytes = "1"
dotenvy = "0.15"
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
