[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "hqagent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "maturin>=1.13.3",
    "python-dotenv>=1.0",
]

[tool.maturin]
features = ["python"]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
